--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -19,6 +19,7 @@ $light: #ECECEC
 $primary: $black
 $body-bg: $white
 $body-color: $black
+$border-color: #C3C3C5
 
 // $container-max-widths: ( sm: 540px, md: 720px, lg: 960px, xl: 1140px, xxl: 1980px )
 $grid-gutter-width: 3.75rem
