--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -12,6 +12,7 @@
 
 @import "_vendors/bootstrap/breadcrumb"
 @import "_vendors/bootstrap/container"
+@import "_vendors/bootstrap/pagination"
 @import "_vendors/bootstrap/table"
 
 @import "blocks/chapter"
