--- a/assets/sass/_theme/_default/base/_typography.sass
+++ b/assets/sass/_theme/_default/base/_typography.sass
@@ -28,6 +28,7 @@ h6
 p, li
     @include media-breakpoint-up(md)
         font-size: px2rem(22)
+        line-height: 140%
 
 .surtitle
     font-family: $headings-font-family
