--- a/assets/sass/_default/layouts/_footer.sass
+++ b/assets/sass/_default/layouts/_footer.sass
@@ -3,9 +3,30 @@ footer[role="contentinfo"]
     color: white
     padding-bottom: px2rem(60)
     padding-top: px2rem(60)
+    @include media-breakpoint-up(md)
+        height: 800px
+        padding-bottom: 0
+        position: relative
+        &::after
+            background-color: rgba(white, 0.3)
+            bottom: calc(#{$spacer} * 5)
+            content: ''
+            height: 1px
+            left: 0
+            position: absolute
+            width: 100%
+
+    .container
+        display: flex
+        flex-direction: column
+        height: 100%
+        justify-content: space-between
+
     .logo
         img
-            height: 42px
+            height: 30px
+            @include media-breakpoint-up(md)
+                height: 42px
 
     .content
         @include media-breakpoint-up(md)
@@ -15,6 +36,13 @@ footer[role="contentinfo"]
                 text-align: right
         > div:nth-child(3)
             display: none
+        p
+            margin-bottom: 0
+
+    .complementary
+        @include media-breakpoint-up(md)
+            padding-bottom: calc(#{$spacer} * 2)
+            padding-top: calc(#{$spacer} * 2)
 
     .credit
         font-family: $font-family-sans-serif
@@ -26,4 +54,5 @@ footer[role="contentinfo"]
             color: white
             text-decoration-color: rgba(white, .3)
             &:hover
+                color: white
                 text-decoration-color: white
