--- a/assets/sass/_default/partials/_hero.sass
+++ b/assets/sass/_default/partials/_hero.sass
@@ -4,7 +4,7 @@
     flex-direction: column
     padding-bottom: 0
     padding-top: px2rem(32)
-    @include media-breakpoint-up(xl)
+    @include media-breakpoint-up(md)
         margin-bottom: px2rem(128)
 
     p
