--- a/assets/sass/_theme/_default/base/_typography.sass
+++ b/assets/sass/_theme/_default/base/_typography.sass
@@ -26,9 +26,10 @@ h6
         line-height: 130%
 
 p, li
+    font-size: px2rem(16)
+    line-height: 140%
     @include media-breakpoint-up(md)
         font-size: px2rem(22)
-        line-height: 140%
 
 .surtitle
     font-family: $headings-font-family
