--- a/assets/sass/_theme/blocks/_pages.sass
+++ b/assets/sass/_theme/blocks/_pages.sass
@@ -1,6 +1,7 @@
 .block-pages
     .block-content
         @include media-breakpoint-up(md)
+            align-items: flex-start
             display: flex
             > *
                 flex: 1
