--- a/assets/sass/_vendors/bootstrap/_pagination.sass
+++ b/assets/sass/_vendors/bootstrap/_pagination.sass
@@ -1,5 +1,7 @@
 .pagination
     margin-top: 0
+    &-between-pages
+        margin-top: $grid-gutter-width
     li
         font-size: px2rem(18)
         line-height: 120%
