--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -4,7 +4,7 @@ $recherche: #EB7100
 $site-color: #4C1540
 $institut-color: #001F5C
 $post-color: #4926AF
-$program-color: #26AF5D
+$program-color: #004B1E
 
 $header-height: 102px
 $hero-height: calc(800px - #{$header-height})
