--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -16,5 +16,7 @@
             caption
                 @extend .visually-hidden
     .toc
+        padding-bottom: px2rem(10)
+        padding-top: px2rem(10)
         .active
             color: $program-color
