--- a/layouts/partials/programs/toc.html
+++ b/layouts/partials/programs/toc.html
@@ -2,22 +2,19 @@
 <nav class="toc" id="nav-toc" aria-label="{{ i18n "commons.toc" }}">
   <ol>
     <li>
-      <a class="nav-link" href="#">Public</a>
+      <a class="nav-link" href="#">Essentiel</a>
     </li>
     <li>
-      <a class="nav-link" href="#">Objectifs professionnels</a>
+      <a class="nav-link" href="#">Présentation</a>
     </li>
     <li>
-      <a class="nav-link" href="#">Insertion</a>
+      <a class="nav-link" href="#">Pédagogie</a>
     </li>
     <li>
-      <a class="nav-link" href="#">Organisation pédagogique</a>
+      <a class="nav-link" href="#">Résultats</a>
     </li>
     <li>
-      <a class="nav-link" href="#">Candidatures</a>
-    </li>
-    <li>
-      <a class="nav-link" href="#">Droits d’inscription</a>
+      <a class="nav-link" href="#">Admission</a>
     </li>
   </ol>
 </nav>
