--- a/assets/sass/_default/partials/_toc.sass
+++ b/assets/sass/_default/partials/_toc.sass
@@ -1,9 +1,10 @@
 .toc
-    ol > li
-        &:not(:last-child)
-            margin-bottom: 0
-        > a
-            @extend .tabtitle
-            color: $gray-500
+    ol
+        > li
+            &:not(:last-child)
+                margin-bottom: 0
+            > a
+                @extend .tabtitle
+                color: $gray-500
     .active
         color: black
