--- a/layouts/partials/programs/index.html
+++ b/layouts/partials/programs/index.html
@@ -17,7 +17,7 @@
               {{- with .Params.diploma -}}
                 {{- $diploma := site.GetPage (printf "/diplomas/%s" .) -}}
                 {{- with $diploma -}}
-                  <span title="{{ partial "PrepareHTML" .Title }}">{{ partial "PrepareHTML" .Params.short_name }}</span>
+                  <a href="{{ .Permalink }}" title="{{ partial "PrepareHTML" .Title }}">{{ partial "PrepareHTML" .Params.short_name }}</a>
                 {{- end -}}
               {{- end -}}
             </td>
