--- a/layouts/partials/programs/hero-single.html
+++ b/layouts/partials/programs/hero-single.html
@@ -5,11 +5,10 @@
       {{ partial "header/breadcrumbs.html" . }}
     {{- end -}}
     <div>
-      <p class="surtitle">Sur titre</p>
       <h1>{{ partial "PrepareHTML" $title }}</h1>
     </div>
   </div>
-  <div>
+  <div id="essential">
     <div class="container">
       <table>
         <caption>{{ i18n "programs.toc.essential" }}</caption>
