--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -52,3 +52,9 @@
                 @extend .surtitle
             h3
                 @extend .h4
+
+    .lead
+        @extend .h2
+        margin-bottom: px2rem(32)
+        @include media-breakpoint-up(md)
+            margin-bottom: px2rem(128)
