--- a/layouts/partials/programs/index.html
+++ b/layouts/partials/programs/index.html
@@ -5,6 +5,22 @@
   <table class="programs">
     {{ range $index, $programs := sort .Pages ".Params.position" }}
       <tbody>
+        <tr>
+          <th>
+            {{- $title := partial "PrepareHTML" .Title -}}
+            <a href="{{ .Permalink }}" title="{{ safeHTML (i18n "commons.more_aria" (dict "Title" $title)) }}">
+              {{- $title -}}
+            </a>
+          </th>
+          <td>
+            {{- with .Params.diploma -}}
+              {{- $diploma := site.GetPage (printf "/diplomas/%s" .) -}}
+              {{- with $diploma -}}
+                <a href="{{ .Permalink }}" title="{{ partial "PrepareHTML" .Title }}">{{ partial "PrepareHTML" .Params.short_name }}</a>
+              {{- end -}}
+            {{- end -}}
+          </td>
+        </tr>
         {{ range sort .Pages ".Params.position"  }}
           <tr>
             <th>
