--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -18,6 +18,7 @@
 @import "blocks/chapter"
 @import "blocks/gallery"
 
+@import "diplomas/widgets"
 @import "home/pages"
 @import "pages/pages"
 @import "posts/pages"
