--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -2,7 +2,7 @@
 $recherche: #EB7100
 
 $site-color: #4C1540
-$institut-color: #001F5C
+$institute-color: #001F5C
 $post-color: #4926AF
 $program-color: #004B1E
 
@@ -21,7 +21,7 @@ $body-bg: $white
 $body-color: $black
 $border-color: #C3C3C5
 
-// $container-max-widths: ( sm: 540px, md: 720px, lg: 960px, xl: 1140px, xxl: 1980px )
+$container-max-widths: ( sm: 100%, md: 100%, lg: 100%, xl: 100%, xxl: 1980px )
 $grid-gutter-width: 3.75rem
 
 $font-family-sans-serif: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
@@ -55,9 +55,9 @@ $breadcrumb-item-padding-x: px2rem(18)
 // $card-title-spacer-y: 0
 //
 // $dropdown-font-size: px2rem(14)
-// $dropdown-border-width: 0
-// $dropdown-border-radius: 0
-// $dropdown-item-padding-x: .75rem
+$dropdown-border-width: 0
+$dropdown-border-radius: 0
+$dropdown-item-padding-x: 1rem
 
 $blockquote-font-size: 1.875rem
 
