--- a/assets/sass/pages/_pages.sass
+++ b/assets/sass/pages/_pages.sass
@@ -4,10 +4,10 @@
 .administrators__term
     header[role="banner"],
     .hero
-        background-color: $institut-color
+        background-color: $institute-color
     .toc
         .active
-            color: $institut-color
+            color: $institute-color
 
 .pages__section
     main
