--- a/assets/sass/_vendors/bootstrap/_container.sass
+++ b/assets/sass/_vendors/bootstrap/_container.sass
@@ -1,5 +1,5 @@
 .container
-    max-width: 1980px
+    // max-width: 1980px
     @include media-breakpoint-down(md)
         padding-left: px2rem(15)
         padding-right: px2rem(15)
