--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -6,6 +6,7 @@
 
 @import "_default/partials/hero"
 @import "_default/partials/menu"
+@import "_default/partials/menu-expand"
 @import "_default/partials/sticky"
 @import "_default/partials/toc"
 @import "_default/partials/top"
