--- a/assets/sass/_default/partials/_menu-expand.sass
+++ b/assets/sass/_default/partials/_menu-expand.sass
@@ -1,21 +1,25 @@
 .menu-expand
 
-    .item-institute
+    .has-children
         .dropdown-menu
             background-color: $institute-color
             color: white
             .dropdown-item,
+            p a,
             li a,
             li span
                 color: white
+
+    .item-page-program
+        .dropdown-menu
+            background-color: $program-color
 
     .dropdown-menu
         > p
             @extend .container
             @extend .h1
-        // > ul
-        //     max-width: map-get($container-max-widths, 'xxl')
-
+            a
+                display: inline-block
 
     @include media-breakpoint-up(lg)
         .dropdown-menu
