--- a/assets/sass/_default/partials/_menu-expand.sass
+++ b/assets/sass/_default/partials/_menu-expand.sass
@@ -20,6 +20,8 @@
             @extend .h1
             a
                 display: inline-block
+                margin-left: 0
+                padding: 0
 
     @include media-breakpoint-up(lg)
         .dropdown-menu
