--- a/assets/sass/pages/_pages.sass
+++ b/assets/sass/pages/_pages.sass
@@ -1,7 +1,5 @@
 .pages__section,
-.pages__page,
-.administrators__taxonomy,
-.administrators__term
+.pages__page
     header[role="banner"],
     .hero
         background-color: $institute-color
