--- a/assets/sass/posts/_pages.sass
+++ b/assets/sass/posts/_pages.sass
@@ -1,9 +1,7 @@
 .posts__section,
 .posts__page,
 .categories__taxonomy,
-.categories__term,
-.authors__taxonomy,
-.authors__term
+.categories__term
     header[role="banner"],
     .hero
         background-color: $post-color
