--- a/assets/sass/_theme/_default/base/_fonts.sass
+++ b/assets/sass/_theme/_default/base/_fonts.sass
@@ -2,17 +2,17 @@
     font-display: swap
     font-family: 'basier_circle'
     font-style: normal
-    font-weight: $font-weight-normal
-    src: url('../fonts/Basier-Circle-regular/basiercircle-regular.eot')
-    src: url('../fonts/Basier-Circle-regular/basiercircle-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/Basier-Circle-regular/basiercircle-regular.woff2') format('woff2'), url('../fonts/Basier-Circle-regular/basiercircle-regular.woff') format('woff'), url('../fonts/Basier-Circle-regular/basiercircle-regular.ttf') format('truetype')
+    font-weight: 500
+    src: url('../fonts/Basier-Circle-medium/basiercircle-medium.eot')
+    src: url('../fonts/Basier-Circle-medium/basiercircle-medium.eot?#iefix') format('embedded-opentype'), url('../fonts/Basier-Circle-medium/basiercircle-medium.woff2') format('woff2'), url('../fonts/Basier-Circle-medium/basiercircle-medium.woff') format('woff'), url('../fonts/Basier-Circle-medium/basiercircle-medium.ttf') format('truetype')
 
 @font-face
     font-display: swap
     font-family: 'basier_circle'
     font-style: normal
-    font-weight: $font-weight-bold
-    src: url('../fonts/Basier-Circle-bold/basiercircle-bold.eot')
-    src: url('../fonts/Basier-Circle-bold/basiercircle-bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Basier-Circle-bold/basiercircle-bold.woff2') format('woff2'), url('../fonts/Basier-Circle-bold/basiercircle-bold.woff') format('woff'), url('../fonts/Basier-Circle-bold/basiercircle-bold.ttf') format('truetype')
+    font-weight: 600
+    src: url('../fonts/Basier-Circle-semibold/basiercircle-semibold.eot')
+    src: url('../fonts/Basier-Circle-semibold/basiercircle-semibold.eot?#iefix') format('embedded-opentype'), url('../fonts/Basier-Circle-semibold/basiercircle-semibold.woff2') format('woff2'), url('../fonts/Basier-Circle-semibold/basiercircle-semibold.woff') format('woff'), url('../fonts/Basier-Circle-semibold/basiercircle-semibold.ttf') format('truetype')
 
 @font-face
     font-display: swap
