--- a/layouts/partials/programs/index.html
+++ b/layouts/partials/programs/index.html
@@ -1,47 +1,5 @@
 <div class="container">
-  {{/* }}
-  {{ partial "programs/program.html" . }}
-  {{ */}}
-  <table class="programs">
-    {{ range .Pages }}
-      <tbody>
-        <tr>
-          <th>
-            {{- $title := partial "PrepareHTML" .Title -}}
-            <a href="{{ .Permalink }}" title="{{ safeHTML (i18n "commons.more_aria" (dict "Title" $title)) }}">
-              {{- $title -}}
-            </a>
-          </th>
-          <td>
-            {{- with .Params.diploma -}}
-              {{- $diploma := site.GetPage (printf "/diplomas/%s" .) -}}
-              {{- with $diploma -}}
-                <a href="{{ .Permalink }}" title="{{ partial "PrepareHTML" .Title }}">{{ partial "PrepareHTML" .Params.short_name }}</a>
-              {{- end -}}
-            {{- end -}}
-          </td>
-        </tr>
-        {{ range sort .Pages ".Params.position"  }}
-          <tr>
-            <th>
-              {{- $title := partial "PrepareHTML" .Title -}}
-              <a href="{{ .Permalink }}" title="{{ safeHTML (i18n "commons.more_aria" (dict "Title" $title)) }}">
-                {{- $title -}}
-              </a>
-            </th>
-            <td>
-              {{- with .Params.diploma -}}
-                {{- $diploma := site.GetPage (printf "/diplomas/%s" .) -}}
-                {{- with $diploma -}}
-                  <a href="{{ .Permalink }}" title="{{ partial "PrepareHTML" .Title }}">{{ partial "PrepareHTML" .Params.short_name }}</a>
-                {{- end -}}
-              {{- end -}}
-            </td>
-          </tr>
-        {{ end }}
-      </tbody>
-    {{ end }}
-  </table>
+  {{ partial "programs/programs-list.html" .Pages }}
 </div>
 
 {{ partial "blocks/list.html" .Params.blocks }}
