--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -9,6 +9,7 @@ $program-color: #004B1E
 $header-height: 102px
 $hero-height: calc(800px - #{$header-height})
 $hero-height-sm: 300px
+$toc-height: 66px
 
 $menu-background-color: white
 
@@ -23,6 +24,7 @@ $border-color: #C3C3C5
 
 $container-max-widths: ( sm: 100%, md: 100%, lg: 100%, xl: 100%, xxl: 1980px )
 $grid-gutter-width: 3.75rem
+$spacer: 1.5rem
 
 $font-family-sans-serif: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $font-size-base: 1rem
@@ -44,6 +46,8 @@ $font-weight-bolder: 700
 
 $lead-font-size: 1.25rem
 $lead-font-weight: 500
+
+$paragraph-margin-bottom: $spacer
 
 $breadcrumb-active-color: $white
 $breadcrumb-divider-color: rgba($white, .5)
@@ -79,6 +83,5 @@ $pagination-active-bg: transparent
 $pagination-active-color: rgba(black, .65)
 $pagination-disabled-color: #DADADA
 
-$spacer: 1.5rem
 
 // $enable-caret: false
