--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -19,9 +19,10 @@
 @import "blocks/chapter"
 @import "blocks/gallery"
 
+@import "diplomas/pages"
 @import "diplomas/widgets"
 @import "home/pages"
-@import "pages/pages"
+@import "pages/"
 @import "posts/pages"
 @import "programs/pages"
 @import "programs/widgets"
