--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -48,7 +48,7 @@
         th, td
             font-weight: 400
             line-height: 140%
-            @include media-breakpoint-up(md)
+            @include media-breakpoint-up(lg)
                 font-size: 22px
         th
             padding-right: 0
